tests/rosetta/out/C/chaos-game.error
cc: exit status 1
/tmp/chaos-game.c: In function ‘_mochi_main’:
/tmp/chaos-game.c:83:5: error: ‘grid’ undeclared (first use in this function)
   83 |     grid = 0;
      |     ^~~~
/tmp/chaos-game.c:83:5: note: each undeclared identifier is reported only once for each function it appears in
/tmp/chaos-game.c:89:12: error: redefinition of ‘vertices’
   89 |   list_int vertices = list_int_create(2);
      |            ^~~~~~~~
/tmp/chaos-game.c:86:12: note: previous definition of ‘vertices’ with type ‘list_int’
   86 |   list_int vertices = list_int_create(2);
      |            ^~~~~~~~
/tmp/chaos-game.c:92:12: error: redefinition of ‘vertices’
   92 |   list_int vertices = list_int_create(2);
      |            ^~~~~~~~
/tmp/chaos-game.c:89:12: note: previous definition of ‘vertices’ with type ‘list_int’
   89 |   list_int vertices = list_int_create(2);
      |            ^~~~~~~~
/tmp/chaos-game.c:96:17: error: conflicting types for ‘vertices’; have ‘list_list_int’
   96 |   list_list_int vertices = {3, vertices_data};
      |                 ^~~~~~~~
/tmp/chaos-game.c:92:12: note: previous definition of ‘vertices’ with type ‘list_int’
   92 |   list_int vertices = list_int_create(2);
      |            ^~~~~~~~
