tests/rosetta/out/C/chaos-game.c
// Generated by Mochi compiler v0.10.28 on 2025-07-18T09:20:50Z
// Generated by Mochi compiler v0.10.28 on 2025-07-18T09:20:50Z
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

typedef struct {
  int len;
  int *data;
} list_int;
static list_int list_int_create(int len) {
  list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  char **data;
} list_string;
static list_string list_string_create(int len) {
  list_string l;
  l.len = len;
  l.data = calloc(len, sizeof(char *));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  list_int *data;
} list_list_int;
static list_list_int list_list_int_create(int len) {
  list_list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(list_int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
static list_string concat_list_string(list_string a, list_string b) {
  list_string r = list_string_create(a.len + b.len);
  for (int i = 0; i < a.len; i++)
    r.data[i] = a.data[i];
  for (int i = 0; i < b.len; i++)
    r.data[a.len + i] = b.data[i];
  return r;
}
static int width = 60;
static int iterations = 5000;
static int y = 0;
static int seed = 1;
static int i = 0;

list_int randInt(int s, int n) {
  int next = (s * 1664525 + 1013904223) % 2147483647;
  list_int tmp1 = list_int_create(2);
  tmp1.data[0] = next;
  tmp1.data[1] = next % n;
  return tmp1;
}

int _mochi_main() {
  int height = (int)(((double)(width) * 0.86602540378));
  while (y < height) {
    list_string line = list_string_create(0);
    int x = 0;
    while (x < width) {
      list_string tmp2 = list_string_create(1);
      tmp2.data[0] = " ";
      list_string tmp3 = concat_list_string(line, tmp2);
      line = tmp3;
      x = x + 1;
    }
    grid = 0;
    y = y + 1;
  }
  list_int vertices = list_int_create(2);
  vertices.data[0] = 0;
  vertices.data[1] = height - 1;
  list_int vertices = list_int_create(2);
  vertices.data[0] = width - 1;
  vertices.data[1] = height - 1;
  list_int vertices = list_int_create(2);
  vertices.data[0] = (int)((((double)width) / ((double)2)));
  vertices.data[1] = 0;
  list_int vertices_data[] = {vertices, vertices, vertices};
  list_list_int vertices = {3, vertices_data};
  int px = (int)((((double)width) / ((double)2)));
  int py = (int)((((double)height) / ((double)2)));
  while (i < iterations) {
    list_int r = randInt(seed, 3);
    seed = r.data[0];
    int idx = (int)(r.data[1]);
    list_int v = vertices.data[idx];
    px = (int)(((px + v.data[0]) / 2));
    py = (int)(((py + v.data[1]) / 2));
    if (px >= 0 && px < width && py >= 0 && py < height) {
      grid.data[py].data[px] = "*";
    }
    i = i + 1;
  }
  y = 0;
  while (y < height) {
    char *line = "";
    int x = 0;
    while (x < width) {
      line = line + grid.data[y].data[x];
      x = x + 1;
    }
    printf("%s\n", line);
    y = y + 1;
  }
  return 0;
}
int main() { return _mochi_main(); }
